--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,19 @@ after_success:
     - docker push alyhdr/multi-nginx
     - docker push alyhdr/multi-server
     - docker push alyhdr/multi-worker
+
+deploy:
+    edge: true
+    provider: elasticbeanstalk
+    regoin: eu-west-3
+    app: multi-docker
+    env: MultiDocker-env
+    bucket_name: elasticbeanstalk-eu-west-3-221104828900
+    bucket_path: docker-multi
+    on:
+        branch: master
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
     
 
     
